# Projet-Parrot-CIR3

./: .gitignore  CMakeLists.txt  README.md  compile.sh  test2.cpp
face-detection-node-opencv/server/lib/routes/: socket.js
projetCIR/: main.cpp
projetCIR/recognition/: detection.cpp  detection.h  ourCircle.h
test/: test.cpp
